--- a/index.html
+++ b/index.html
@@ -1,12 +1,107 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lubimovka</title>
+    <!-- сюда будем подключать все остальные CSS файлы -->
+    <link rel="stylesheet" href="./pages/index.css">
+    <title>Любимовка</title>
+    <meta name="team" content="4 спартанца">
+    <meta name="authors" content="Тимофей Шакиров, Камиль Каландаров, Илья Пичугин, Игорь Шокин">
 </head>
-<body>
-    
+
+<body class="page">
+    <!-- шапка -->
+    <header class="header">
+        <img class="logo" alt="Логотип">
+        <nav>
+            <ul class="header__links">
+                <li class="header__link">
+                    Афиша
+                </li>
+                <li class="header__link">
+                    Библиотека
+                </li>
+                <li class="header__link">
+                    Проекты
+                </li>
+                <li class="header__link">
+                    История
+                </li>
+                <li class="header__link">
+                    Блог
+                </li>
+                <li class="header__link">
+                    Новости
+                </li>
+                <li class="header__link">
+                    О фестивале
+                </li>
+                <li class="header__link">
+                    Контакты
+                </li>
+            </ul>
+        </nav>
+        <!-- есть сомнения стоит ли оборачивать социальные сети в nav, так что если у вас есть мнение на этот счёт пишите :) -->
+        <!-- для соц сетей создал отдельные классы и элементы так как высота строки у них отлична от предыдуших ссылок в шапке -->
+        <nav>
+            <ul class="header__socials">
+                <li class="header__social">
+                    fb
+                </li>
+                <li class="header__social">
+                    inst
+                </li>
+                <li class="header__social">
+                    ytube
+                </li>
+                <li class="header__social">
+                    tlgrm
+                </li>
+                <li class="header__social">
+                    vk
+                </li>
+            </ul>
+        </nav>
+        <a class="header__support">
+            <div class="header__support-icon">
+                <!-- иконку крестика предлагаю поместить сюда через background -->
+            </div>
+            <!-- в стилях укажите uppercase, а то ревьюеры ругаются когда в html пишется все заглавными буквами -->
+            поддержать
+        </a>
+    </header>
+    <main>
+        <!-- основной контент страницы -->
+        <section class="content">
+
+        </section>
+        <!-- фотографии (включая заголовок) -->
+        <section class="photo">
+
+        </section>
+        <!-- рецензии -->
+        <section class="reviews">
+
+        </section>
+        <!-- отзывы -->
+        <section class="feedback">
+            <!-- рассказать о спектакле -->
+        </section>
+
+        <!-- рассказать о спектакле -->
+        <section class="share">
+            <!-- фотографию предлагаю вставить в эту секцию -->
+        </section>
+
+
+
+    </main>
+    <footer class="footer">
+    </footer>
+
 </body>
+
 </html>
