Section photo created

--- a/index.html
+++ b/index.html
@@ -80,7 +80,33 @@
         </section>
         <!-- фотографии (включая заголовок) -->
         <section class="photo">
-
+            <h4 class="photo__title">Заголовок блока с&nbsp;фотографиями</h4>
+            <ul class="photo__items photo__centered">
+                <li class="photo__item">
+                    <img class="photo__picture" src="./images/photo-1.jpg" alt="Мужчина и женщина на сцене">
+                </li>
+                <li class="photo__item">
+                    <img class="photo__picture" src="./images/photo-2.jpg" alt="Женщина, сидящая на сцене">
+                </li>
+                <li class="photo__item">
+                    <img class="photo__picture" src="./images/photo-3.jpg" alt="Мужчина репетирует пьесу">
+                </li>
+                <li class="photo__item">
+                    <img class="photo__picture" src="./images/photo-4.jpg" alt="Группа артистов репетируют пьесу">
+                </li>
+                <li class="photo__item">
+                    <img class="photo__picture" src="./images/photo-5.jpg" alt="Зрители смотрятп пьесу">
+                </li>
+                <li class="photo__item">
+                    <img class="photo__picture" src="./images/photo-6.jpg" alt="Девушка репетирует пьесу">
+                </li>
+                <li class="photo__item">
+                    <img class="photo__picture" src="./images/photo-7.jpg" alt="Группа артистов репетируют пьесу">
+                </li>
+                <li class="photo__item">
+                    <img class="photo__picture" src="./images/photo-8.jpg" alt="Девушка репетирует пьесу">
+                </li>
+            </ul>
         </section>
         <!-- рецензии -->
         <section class="reviews">
