Начало работы над футером

--- a/index.html
+++ b/index.html
@@ -100,6 +100,26 @@
 
     </main>
     <footer class="footer">
+        <ul class="footer__logos">
+            <li class="footer__lub-logo">
+                <img src="./blocks/footer/любимовкалого.svg" alt="">
+            </li>
+            <li class="footer__paragraph">
+                <p class="footer__partners">Генеральные партнеры</p>
+            </li>
+            <li class="footer__logo">
+                <img src="./blocks/footer/фондлого.png" alt="Фонд Михаила Прохорова">
+            </li>
+            <li class="footer__logo">
+                <img src="blocks/footer/брюхаус.png" alt="Mosbrew">
+            </li>
+            <li class="footer__logo">
+                <img src="./blocks/footer/сбтг.png" alt="SBTG.ru">
+            </li>
+            <li class="footer__logo">
+                <img src="./blocks/footer/апоговорить.png" alt="А поговорить?">
+            </li>
+        </ul>
     </footer>
 
 </body>
