--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 <body class="page">
   <!-- шапка -->
   <header class="header">
+    <div class="header__line-top">
+    </div>
     <img class="logo" alt="Логотип" src="./images/header-logo.svg">
     <nav class="header__menu">
       <ul class="header__links">
