--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <div class="header__line-top">
     </div>
     <img class="logo" alt="Логотип" src="./images/header-logo.svg">
+    <button class="header__button" type="button">проекты</button>
     <nav class="header__menu">
       <ul class="header__links">
         <li class="header__menu-item">
@@ -95,9 +96,7 @@
     </nav>
     <a class="header__support" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
       <div class="header__support-icon">
-
       </div>
-
       поддержать
     </a>
   </header>
