--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     </section>
     <!-- фотографии (включая заголовок) -->
     <section class="photo">
-      <h4 class="photo__title">Заголовок блока с&nbsp;фотографиями</h4>
+      <h4 class="section-title">Заголовок блока с&nbsp;фотографиями</h4>
       <ul class="photo__items photo__centered">
         <li class="photo__item">
           <img class="photo__picture" src="./images/photo-1.jpg" alt="Мужчина и женщина на сцене">
@@ -134,11 +134,18 @@
     </section>
     <!-- рецензии -->
     <section class="reviews">
-
+      <h2 class="section-title">Отзывы зрителей</h2>
+      <ul class="reviews__items">
+        <li class="reviews__item">
+          <p class="reviews__comment">Что-то похожее на эффект от мультфильмов типа «Сауз Парк» или про коня Боджэка возникает — я думаю, и пьеса написана с этой интонацией американских взрослых мультсериалов. И как хорошо все это с куклой-носочком. Так все чисто сделано!</p>
+          <p class="reviews__author">Наталья Зайцева</p>
+        </li>
+      </ul>
     </section>
     <!-- отзывы -->
     <section class="feedback">
       <!-- рассказать о спектакле -->
+      <h2></h2>
     </section>
 
     <!-- рассказать о спектакле -->
