--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     </section>
     <!-- фотографии (включая заголовок) -->
     <section class="photo">
-      <h4 class="section-title">Заголовок блока с&nbsp;фотографиями</h4>
+      <h4 class="section-title section-title_type_1">Заголовок блока с&nbsp;фотографиями</h4>
       <ul class="photo__items photo__centered">
         <li class="photo__item">
           <img class="photo__picture" src="./images/photo-1.jpg" alt="Мужчина и женщина на сцене">
@@ -134,19 +134,25 @@
     </section>
     <!-- рецензии -->
     <section class="reviews">
-      <h2 class="section-title">Отзывы зрителей</h2>
-      <ul class="reviews__items">
-        <li class="reviews__item">
-          <p class="reviews__comment">Что-то похожее на эффект от мультфильмов типа «Сауз Парк» или про коня Боджэка возникает — я думаю, и пьеса написана с этой интонацией американских взрослых мультсериалов. И как хорошо все это с куклой-носочком. Так все чисто сделано!</p>
-          <p class="reviews__author">Наталья Зайцева</p>
-        </li>
-      </ul>
     </section>
     <!-- отзывы -->
     <section class="feedback">
-      <!-- рассказать о спектакле -->
-      <h2></h2>
-    </section>
+      <h2 class="section-title section-title_type_2">Отзывы зрителей</h2>
+      <ul class="feedback__items">
+        <li class="feedback__item">
+          <p class="feedback__comment">Что-то похожее на эффект от мультфильмов типа «Сауз Парк» или про коня Боджэка возникает — я думаю, и пьеса написана с этой интонацией американских взрослых мультсериалов. И как хорошо все это с куклой-носочком. Так все чисто сделано!</p>
+          <p class="feedback__author">Наталья Зайцева</p>
+        </li>
+        <li class="feedback__item">
+          <p class="feedback__comment">Для самой этой истории формат читки работает отличным ироническим отстранением</p>
+          <p class="feedback__author">Дина Годер</p>
+        </li>
+        <li class="feedback__item">
+          <p class="feedback__comment">Мне данный формат дал возможность самой выбирать, как двигается персонаж, что на нем надето, какую машину он водит, и что за плакат висит в подвале церкви. Это было приятно, ведь я как будто сама поучаствовала в спектакле</p>
+          <p class="feedback__author">Дарья Морозова</p>
+        </li>
+      </ul>
+    </section> 
 
     <!-- рассказать о спектакле -->
     <section class="share">
