--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     </section>
     <!-- фотографии (включая заголовок) -->
     <section class="photo">
-      <h4 class="section-title section-title_type_1">Заголовок блока с&nbsp;фотографиями</h4>
+      <h4 class="section-title section-title_place_photo">Заголовок блока с&nbsp;фотографиями</h4>
       <ul class="photo__items photo__centered">
         <li class="photo__item">
           <img class="photo__picture" src="./images/photo-1.jpg" alt="Мужчина и женщина на сцене">
@@ -137,7 +137,17 @@
     </section>
     <!-- отзывы -->
     <section class="feedback">
-      <h2 class="section-title section-title_type_2">Отзывы зрителей</h2>
+      <div class="slider-container">
+        <h2 class="section-title">Отзывы зрителей</h2>
+        <div class="slider">
+          <button class="slider__dot-button"></button>
+          <button class="slider__dot-button"></button>
+          <button class="slider__dot-button"></button>
+          <button class="slider__dot-button"></button>
+          <button class="slider__button slider__button_direction_left"></button>
+          <button class="slider__button slider__button_direction_right"></button>
+        </div>
+      </div>
       <ul class="feedback__items">
         <li class="feedback__item">
           <p class="feedback__comment">Что-то похожее на эффект от мультфильмов типа «Сауз Парк» или про коня Боджэка возникает — я думаю, и пьеса написана с этой интонацией американских взрослых мультсериалов. И как хорошо все это с куклой-носочком. Так все чисто сделано!</p>
