--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
         </section>
         <!-- фотографии (включая заголовок) -->
         <section class="photo">
-            <h4 class="photo__title">Заголовок блока с&nbsp;фотографиями</h4>
-            <ul class="photo__items photo__centered">
+            <h2 class="title">Заголовок блока с&nbsp;фотографиями</h2>
+            <ul class="photo__items">
                 <li class="photo__item">
                     <img class="photo__picture" src="./images/photo-1.jpg" alt="Мужчина и женщина на сцене">
                 </li>
@@ -110,7 +110,40 @@
         </section>
         <!-- рецензии -->
         <section class="reviews">
-
+            <h2 class="title">Рецензии</h2>
+            <div class="splide">
+                <div class="splide__track">
+                    <ul class="splide__list">
+                        <li class="splide__slide">
+                            <img class="reviews__title" src="./images/review-title-1.svg" alt="Заголовок статьи">
+                            <p class="reviews__text">
+                                «Действие пьесы «Длань Господня» разворачивается в подвале провинциальной церкви в Техасе, 
+                                где мать главного героя с группой добровольцев готовит кукольное представление. 
+                                Ей отчаянно нужна эта работа, её муж недавно умер, оставив её с сыном-подростком в эмоциональной и финансовой яме. 
+                                И вот жуткая тварь захватывает контроль над левой рукой её беспокойного Джейсона и принимается терроризировать его и всех вокруг. 
+                                По мере накала страстей окружающие начинают подозревать, что рука одержима самим дьяволом, и пастор Грег предлагает прибегнуть к экзорцизму. 
+                                Однако «Длань Господня» — это не ужастик, по крайней мере, природа зла тут вовсе не сверхъестественная. 
+                                Чёрная комедия Аскинса о разделённой надвое душе человека ненавязчиво обнажает глубинные импульсы — сексуальные, саморазрушительные, агрессивные — которые притаились в каждом из нас».
+                            </p>
+                            <a class="reviews__link" href="#" target="blank">ЧИТАТЬ ПОЛНОСТЬЮ</a>
+                        </li>
+                        <li class="splide__slide">
+                            <img class="reviews__title" src="./images/review-title-2.svg" alt="Заголовок статьи">
+                            <p class="reviews__text">
+                                «Действие пьесы «Длань Господня» разворачивается в подвале провинциальной церкви в Техасе, 
+                                где мать главного героя с группой добровольцев готовит кукольное представление. 
+                                Ей отчаянно нужна эта работа, её муж недавно умер, оставив её с сыном-подростком в эмоциональной и финансовой яме. 
+                                И вот жуткая тварь захватывает контроль над левой рукой её беспокойного Джейсона и принимается терроризировать его и всех вокруг. 
+                                По мере накала страстей окружающие начинают подозревать, что рука одержима самим дьяволом, и пастор Грег предлагает прибегнуть к экзорцизму. 
+                                Однако «Длань Господня» — это не ужастик, по крайней мере, природа зла тут вовсе не сверхъестественная. 
+                                Чёрная комедия Аскинса о разделённой надвое душе человека ненавязчиво обнажает глубинные импульсы — сексуальные, саморазрушительные, агрессивные — которые притаились в каждом из нас».
+                            </p>
+                            <a class="reviews__link" href="#" target="blank">ЧИТАТЬ ПОЛНОСТЬЮ</a>
+                        </li>
+                        <li class="splide__slide"></li>
+                    </ul>
+                </div>
+            </div>
         </section>
         <!-- отзывы -->
         <section class="feedback">
@@ -127,7 +160,6 @@
     </main>
     <footer class="footer">
     </footer>
-
 </body>
 
 </html>
