--- a/index.html
+++ b/index.html
@@ -120,6 +120,82 @@
                 <img src="./blocks/footer/апоговорить.png" alt="А поговорить?">
             </li>
         </ul>
+        <div class="footer__content">
+            <div class="footer__address">
+            <p class="footer__title">Площадка «8/3»</p>
+            <p class="footer__text">Москва, ул. Казакова, 8, стр. 3 Метро «Курская»</p>
+            </div>
+            <ul class="footer__items">
+                <li class="footer__item">
+                    <a href="#" class="footer__link">Любимовка</a>
+                </li>
+                <li class="footer__item">
+                    <a href="#" class="footer__link">Афиша</a>
+                </li>
+                <li class="footer__item">
+                    <a href="#" class="footer__link">Библиотека</a>
+                </li>
+                <li class="footer__item">
+                    <a href="#" class="footer__link">Блог</a>
+                </li>
+                <li class="footer__item">
+                    <a href="#" class="footer__link">Новости</a>
+                </li>
+            </ul>
+            <ul class="footer__items">
+                <li class="footer__item">
+                    <a href="#" class="footer__link">О фестивале</a>
+                </li>
+                <li class="footer__item">
+                    <a href="#" class="footer__link">Органзаторы</a>
+                </li>
+                <li class="footer__item">
+                    <a href="#" class="footer__link">История</a>
+                </li>
+                <li class="footer__item">
+                    <a href="#" class="footer__link">Контакты</a>
+                </li>
+                <li class="footer__item">
+                    <a href="#" class="footer__link">Для прессы</a>
+                </li>
+            </ul>
+            <ul class="footer__items">
+                <li class="footer__item">
+                    <a href="#" class="footer__link">Все проекты</a>
+                </li>
+                <li class="footer__item">
+                    <a href="#" class="footer__link">Любимовка.Ещё</a>
+                </li>
+                <li class="footer__item">
+                    <a href="#" class="footer__link">Спектакли</a>
+                </li>
+                <li class="footer__item">
+                    <a href="#" class="footer__link">Сборник Любимовка.Пьесы</a>
+                </li>
+                <li class="footer__item">
+                    <a href="#" class="footer__link">Lark+Любимовка</a>
+                </li>
+                <li class="footer__item">
+                    <a href="#" class="footer__link">Практика постдраматурга</a>
+                </li>
+                <li class="footer__item">
+                    <a href="#" class="footer__link">Эхо Любимовки</a>
+                </li>
+            </ul>
+        </div>
+        <div class="footer__bottom">
+            <div class="footer__conf">
+                <p class="footer__conf-lyubimovka">&copy; Любимовка</p>
+                <a class="footer__policy" href="#">Политика конфиденциальности</a>
+            </div>
+            <div class="footer__copyright">
+                <figure class="footer__design">
+                    <figcaption class="footer__design-title">дизайн сайта — shishki.collective</figcaption>
+                    <img class="footer__design-logo" alt="Shishki Logo" src="./blocks/footer/shishki.svg">
+                </figure>
+                <p class="footer__students">вёрстка и разработка — студенты Яндекс.Практикума</p>
+            </div>
+        </div>
     </footer>
 
 </body>
