--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     <a href="#" class="footer__link">О фестивале</a>
                 </li>
                 <li class="footer__item">
-                    <a href="#" class="footer__link">Органзаторы</a>
+                    <a href="#" class="footer__link">Организаторы</a>
                 </li>
                 <li class="footer__item">
                     <a href="#" class="footer__link">История</a>
