Добавлены шрифты, доработаны отступы

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         </div>
         <div class="footer__bottom">
             <div class="footer__conf">
-                <p class="footer__conf-lyubimovka">&copy; Любимовка</p>
+                <p class="footer__conf-lyubimovka">&copy; Любимовка, 2021</p>
                 <a class="footer__policy" href="#">Политика конфиденциальности</a>
             </div>
             <div class="footer__copyright">
