--- a/index.html
+++ b/index.html
@@ -145,9 +145,10 @@
       <div class="splide reviews__splide" id="splide">
         <div class="splide__slider">
           <div class="splide__arrows">
-            <button class="slider__button_direction_left splide__arrow slider__button"></button>
-            <button class="slider__button_direction_right slider__button splide__arrow"></button>
+            <button class="slider__button_direction_left splide__arrow slider__button  splide__arrow--prev"></button>
+            <button class="slider__button_direction_right slider__button splide__arrow  splide__arrow--next"></button>
           </div>
+          
         </div>
         <div class="splide__track">
           <ul class="splide__list">
