--- a/index.html
+++ b/index.html
@@ -135,20 +135,13 @@
     <section class="reviews main__reviews">
       <div class="slider-container">
         <h2 class="section-title1">Рецензии</h2>
-        <div class="slider">
-          <button class="slider__dot-button"></button>
-          <button class="slider__dot-button"></button>
-          <button class="slider__dot-button"></button>
-          <button class="slider__dot-button"></button>
-        </div>
       </div>
       <div class="splide reviews__splide" id="splide">
         <div class="splide__slider">
           <div class="splide__arrows">
-            <button class="slider__button_direction_left splide__arrow slider__button  splide__arrow--prev"></button>
-            <button class="slider__button_direction_right slider__button splide__arrow  splide__arrow--next"></button>
+            <button class="slider__button_direction_left splide__arrow slider__button"></button>
+            <button class="slider__button_direction_right slider__button splide__arrow"></button>
           </div>
-          
         </div>
         <div class="splide__track">
           <ul class="splide__list">
