--- a/index.html
+++ b/index.html
@@ -141,21 +141,24 @@
               <div class="reviews__container">
                 <img class="reviews__title" src="./images/review-title-1.svg" alt="Заголовок статьи">
                 <p class="reviews__text">
-<<<<<<< HEAD
                     «Действие пьесы «Длань Господня» разворачивается в подвале провинциальной церкви в Техасе,
                     где мать главного героя с группой добровольцев готовит кукольное представление.
                     Ей отчаянно нужна эта работа, её муж недавно умер, оставив её с сыном-подростком в эмоциональной и финансовой яме.
                     И вот жуткая тварь захватывает контроль над левой рукой её беспокойного Джейсона и принимается терроризировать его и всех вокруг.
                     По мере накала страстей окружающие начинают подозревать, что рука одержима самим дьяволом, и пастор Грег предлагает прибегнуть к экзорцизму.
                     Однако «Длань Господня» — это не ужастик, по крайней мере, природа зла тут вовсе не сверхъестественная.
-=======
                     «Действие пьесы «Длань Господня» разворачивается в подвале провинциальной церкви в Техасе,
                     где мать главного героя с группой добровольцев готовит кукольное представление.
                     Ей отчаянно нужна эта работа, её муж недавно умер, оставив её с сыном-подростком в эмоциональной и финансовой яме.
                     И вот жуткая тварь захватывает контроль над левой рукой её беспокойного Джейсона и принимается терроризировать его и всех вокруг.
                     По мере накала страстей окружающие начинают подозревать, что рука одержима самим дьяволом, и пастор Грег предлагает прибегнуть к экзорцизму.
                     Однако «Длань Господня» — это не ужастик, по крайней мере, природа зла тут вовсе не сверхъестественная.
->>>>>>> parent of d633a89 (finish)
+                    «Действие пьесы «Длань Господня» разворачивается в подвале провинциальной церкви в Техасе,
+                    где мать главного героя с группой добровольцев готовит кукольное представление.
+                    Ей отчаянно нужна эта работа, её муж недавно умер, оставив её с сыном-подростком в эмоциональной и финансовой яме.
+                    И вот жуткая тварь захватывает контроль над левой рукой её беспокойного Джейсона и принимается терроризировать его и всех вокруг.
+                    По мере накала страстей окружающие начинают подозревать, что рука одержима самим дьяволом, и пастор Грег предлагает прибегнуть к экзорцизму.
+                    Однако «Длань Господня» — это не ужастик, по крайней мере, природа зла тут вовсе не сверхъестественная.
                     Чёрная комедия Аскинса о разделённой надвое душе человека ненавязчиво обнажает глубинные импульсы — сексуальные, саморазрушительные, агрессивные — которые притаились в каждом из нас».
                 </p>
                 <button class="reviews__button" href="#" target="blank">ЧИТАТЬ ПОЛНОСТЬЮ</button>
@@ -165,21 +168,24 @@
               <div class="reviews__container reviews__container_type_next-container">
                 <img class="reviews__title" src="./images/review-title-2.svg" alt="Заголовок статьи">
                 <p class="reviews__text reviews__text_type_next-text">
-<<<<<<< HEAD
                     «Действие пьесы «Длань Господня» разворачивается в подвале провинциальной церкви в Техасе,
                     где мать главного героя с группой добровольцев готовит кукольное представление.
                     Ей отчаянно нужна эта работа, её муж недавно умер, оставив её с сыном-подростком в эмоциональной и финансовой яме.
                     И вот жуткая тварь захватывает контроль над левой рукой её беспокойного Джейсона и принимается терроризировать его и всех вокруг.
                     По мере накала страстей окружающие начинают подозревать, что рука одержима самим дьяволом, и пастор Грег предлагает прибегнуть к экзорцизму.
                     Однако «Длань Господня» — это не ужастик, по крайней мере, природа зла тут вовсе не сверхъестественная.
-=======
                     «Действие пьесы «Длань Господня» разворачивается в подвале провинциальной церкви в Техасе,
                     где мать главного героя с группой добровольцев готовит кукольное представление.
                     Ей отчаянно нужна эта работа, её муж недавно умер, оставив её с сыном-подростком в эмоциональной и финансовой яме.
                     И вот жуткая тварь захватывает контроль над левой рукой её беспокойного Джейсона и принимается терроризировать его и всех вокруг.
                     По мере накала страстей окружающие начинают подозревать, что рука одержима самим дьяволом, и пастор Грег предлагает прибегнуть к экзорцизму.
                     Однако «Длань Господня» — это не ужастик, по крайней мере, природа зла тут вовсе не сверхъестественная.
->>>>>>> parent of d633a89 (finish)
+                    «Действие пьесы «Длань Господня» разворачивается в подвале провинциальной церкви в Техасе,
+                    где мать главного героя с группой добровольцев готовит кукольное представление.
+                    Ей отчаянно нужна эта работа, её муж недавно умер, оставив её с сыном-подростком в эмоциональной и финансовой яме.
+                    И вот жуткая тварь захватывает контроль над левой рукой её беспокойного Джейсона и принимается терроризировать его и всех вокруг.
+                    По мере накала страстей окружающие начинают подозревать, что рука одержима самим дьяволом, и пастор Грег предлагает прибегнуть к экзорцизму.
+                    Однако «Длань Господня» — это не ужастик, по крайней мере, природа зла тут вовсе не сверхъестественная.
                     Чёрная комедия Аскинса о разделённой надвое душе человека ненавязчиво обнажает глубинные импульсы — сексуальные, саморазрушительные, агрессивные — которые притаились в каждом из нас».
                 </p>
                 <button class="reviews__button" href="#" target="blank">ЧИТАТЬ ПОЛНОСТЬЮ</button>
@@ -195,14 +201,18 @@
                     И вот жуткая тварь захватывает контроль над левой рукой её беспокойного Джейсона и принимается терроризировать его и всех вокруг.
                     По мере накала страстей окружающие начинают подозревать, что рука одержима самим дьяволом, и пастор Грег предлагает прибегнуть к экзорцизму.
                     Однако «Длань Господня» — это не ужастик, по крайней мере, природа зла тут вовсе не сверхъестественная.
-
                     «Действие пьесы «Длань Господня» разворачивается в подвале провинциальной церкви в Техасе,
                     где мать главного героя с группой добровольцев готовит кукольное представление.
                     Ей отчаянно нужна эта работа, её муж недавно умер, оставив её с сыном-подростком в эмоциональной и финансовой яме.
                     И вот жуткая тварь захватывает контроль над левой рукой её беспокойного Джейсона и принимается терроризировать его и всех вокруг.
                     По мере накала страстей окружающие начинают подозревать, что рука одержима самим дьяволом, и пастор Грег предлагает прибегнуть к экзорцизму.
                     Однако «Длань Господня» — это не ужастик, по крайней мере, природа зла тут вовсе не сверхъестественная.
-
+                    «Действие пьесы «Длань Господня» разворачивается в подвале провинциальной церкви в Техасе,
+                    где мать главного героя с группой добровольцев готовит кукольное представление.
+                    Ей отчаянно нужна эта работа, её муж недавно умер, оставив её с сыном-подростком в эмоциональной и финансовой яме.
+                    И вот жуткая тварь захватывает контроль над левой рукой её беспокойного Джейсона и принимается терроризировать его и всех вокруг.
+                    По мере накала страстей окружающие начинают подозревать, что рука одержима самим дьяволом, и пастор Грег предлагает прибегнуть к экзорцизму.
+                    Однако «Длань Господня» — это не ужастик, по крайней мере, природа зла тут вовсе не сверхъестественная.
                     Чёрная комедия Аскинса о разделённой надвое душе человека ненавязчиво обнажает глубинные импульсы — сексуальные, саморазрушительные, агрессивные — которые притаились в каждом из нас».
                 </p>
                 <button class="reviews__button" href="#" target="blank">ЧИТАТЬ ПОЛНОСТЬЮ</button>
