--- a/index.html
+++ b/index.html
@@ -369,6 +369,8 @@
     <!-- рассказать о спектакле -->
     <section class="share">
       <!-- фотографию предлагаю вставить в эту секцию -->
+      <img src="./blocks/footer/Rectangle203.png" alt="Рассказать о спектакле" class="share__picture">
+      
     </section>
   </main>
     <footer class="footer">
