social-links-added

--- a/index.html
+++ b/index.html
@@ -64,27 +64,27 @@
     <nav>
       <ul class="header__socials">
         <li class="header__social">
-          <a class="header__link" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
+          <a class="header__link header__link-social" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
             fb
           </a>
         </li>
         <li class="header__social">
-          <a class="header__link" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
+          <a class="header__link header__link-social" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
             inst
           </a>
         </li>
         <li class="header__social">
-          <a class="header__link" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
+          <a class="header__link header__link-social" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
             ytube
           </a>
         </li>
         <li class="header__social">
-          <a class="header__link" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
+          <a class="header__link header__link-social" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
             tlgrm
           </a>
         </li>
         <li class="header__social">
-          <a class="header__link" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
+          <a class="header__link header__link-social" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
             vk
           </a>
         </li>
